fix: show text upload button on Safari

--- a/app/style/components/buttons.scss
+++ b/app/style/components/buttons.scss
@@ -37,7 +37,7 @@ a.record {
   }
 }
 
-input[type=submit] {
+button[type=submit] {
   color: $white;
   background: $pink;
   border: none;
